# ezsam

./: .env  .envrc  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  make-nuitka.sh  make-py2exe.py  make-pyinstaller.sh  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: make.yml  pages.yml  release.yml
app/: .pre-commit-config.yaml
app/src/ezsam/cli/: app.py
changelog/: index.html
config/: GroundingDINO_SwinT_OGC.py
credits/: index.html
develop/: index.html
docs/: mkdocs.yml  pyproject.toml  requirements.txt
docs/src/: CNAME  changelog.md  credits.md  develop.md  index.md  install.md  usage.md
docs/src/assets/: extra.css
examples/: food.turkey.webm
install/: index.html
search/: search_index.json
src/ezsam/cli/: app.py  models.py  process.py
src/ezsam/cli/config/: defaults.py  utils.py
src/ezsam/gui/: app.py  config.py
src/ezsam/gui/assets/: README.md
src/ezsam/lib/: config.py  logger.py  path.py  resize.py
tests/: nuitka-test-advanced.py  nuitka-test-simple.py
usage/: index.html
