[project]
name = "ezsam"
version = "0.2.1"
description = "Extract foreground from images or video via text prompt" 
readme = "README.md"
requires-python = ">=3.9, <3.12"
license = {text = "AGPL-3.0-only"}
keywords = [
  "GroundingDINO",
  "Segment-Anything",
  "SAM",
  "SAM-HQ",
  "Grounded-Segment-Anything",
  "subject",
  "object",
  "foreground",
  "background",
  "filter",
  "extract",
  "select",
  "remove",
  "prompt",
  "subtract",
]
authors = [
  {name = "ae9is", email = "aegis.opensource@gmail.com"}
]
maintainers = [
  {name = "ae9is", email = "aegis.opensource@gmail.com"}
]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "opencv-python>=4.9.0.80",
    "numpy>=1.26.3",
    "supervision>=0.17.1",
    "filetype>=1.2.0",
    "segment-anything-hq>=0.3",
    "torch>=2.1.2",
    "torchvision>=0.16.2",
    "tqdm>=4.66.1",
    "rf-groundingdino>=0.1.2",
    "customtkinter>=5.2.2",
    "tkinterdnd2>=0.3.0",
    "pillow>=10.2.0",
]

[project.optional-dependencies]
cli = [
    "opencv-python>=4.9.0.80",
    "numpy>=1.26.3",
    "supervision>=0.17.1",
    "filetype>=1.2.0",
    "segment-anything-hq>=0.3",
    "torch>=2.1.2",
    "torchvision>=0.16.2",
    "tqdm>=4.66.1",
    "rf-groundingdino>=0.1.2",
]
gui = [
    "opencv-python>=4.9.0.80",
    "numpy>=1.26.3",
    "customtkinter>=5.2.2",
    "tkinterdnd2>=0.3.0",
    "pillow>=10.2.0",
]

[project.urls]
"Homepage" = "https://www.ezsam.org"
"Bug Reports" = "https://github.com/ae9is/ezsam/issues"
"Source" = "https://github.com/ae9is/ezsam"

[project.scripts]
ezsam = "ezsam.cli.app:main"
ezsam-gui = "ezsam.gui.app:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# ref: https://github.com/pdm-project/pdm/issues/2189
[tool.pdm.options]
lock = ["--no-cross-platform"]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
install-all = "pdm install -G:all"
post_install = "pdm requirements"
lint = "ruff check src"
format = "ruff format ."
requirements = "pdm export -o requirements.txt"
start = "python src/ezsam/cli/app.py {args}"
cli = "pdm start {args}"
gui = "python src/ezsam/gui/app.py {args}"
clean = "rm -rf .venv .pdm-build .pdm-python .ruff_cache dist"
make-pyinstaller = { shell = "bash make-pyinstaller.sh ezsam {args}" }
make-nuitka = { shell = "bash make-nuitka.sh {args}" }
make-py2exe = "python make-py2exe.py --version {args}"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.11",
    "pytest>=7.4.4",
]
make = [
    "pyinstaller>=6.5.0",
    "nuitka>=2.1.1",
]
make-win = [
    "py2exe>=0.13.0.1",
]

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "src"
includes = ["src/ezsam/**/*.py"]
source-includes = ["tests", "LICENSE", "README.md", "requirements.txt"]

[tool.ruff]
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "*.bak",
  "*.pyc",
]
line-length = 120
indent-width = 2
target-version = "py311"

[tool.ruff.format]
quote-style = "single"
