[project]
name = "docs"
version = "0.0.0"
description = "Docs for ezsam" 
requires-python = ">=3.9, <3.12"
license = {text = "AGPL-3.0-only"}
authors = [
  {name = "ae9is", email = "aegis.opensource@gmail.com"}
]
maintainers = [
  {name = "ae9is", email = "aegis.opensource@gmail.com"}
]
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.4",
]

[project.urls]
"Homepage" = "https://github.com/ae9is/ezsam"
"Bug Reports" = "https://github.com/ae9is/ezsam/issues"
"Source" = "https://github.com/ae9is/ezsam/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# ref: https://github.com/pdm-project/pdm/issues/2189
[tool.pdm.options]
lock = ["--no-cross-platform"]

[tool.pdm]
distribution = "true"

[tool.pdm.scripts]
start = "mkdocs serve"
build = "mkdocs build"
deploy-pages = "mkdocs gh-deploy --force"
lint = "ruff check src"
format = "ruff format ."
safety = { shell = "pdm export -o requirements.txt && safety check -r requirements.txt --bare" }
clean = "rm -rf .venv .pdm-build .pdm-python .ruff_cache dist"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.11",
    "safety>=2.3.5",
]

[tool.ruff]
exclude = [
  ".git",
  ".venv",
]
line-length = 120
indent-width = 2
target-version = "py311"

[tool.ruff.format]
quote-style = "single"
